force-app/main/default/objects/Prospect_Landing_Zone__c/Prospect_Landing_Zone__c.object-meta.xml
<CustomObject>
    <label>Prospect Landing Zone</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects Landing Zone</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>