force-app/main/default/objects/Prospect_Landing_Zone__c/fields/ESC_NBC_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Home_Phone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>