force-app/main/default/objects/Prospect_Landing_Zone__c/fields/headline__c.field-meta.xml
<CustomField>
    <fullName>headline__c</fullName>
    <label>Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>