force-app/main/default/objects/Prospect_Landing_Zone__c/fields/lastName__c.field-meta.xml
<CustomField>
    <fullName>lastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>