force-app/main/default/objects/Prospect_Landing_Zone__c/fields/Linkedin_About_Me__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_About_Me__c</fullName>
    <label>Linkedin About Me</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>