force-app/main/default/objects/Prospect_Landing_Zone__c/fields/Linkedin_Languages__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Languages__c</fullName>
    <label>Linkedin Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>