force-app/main/default/objects/Prospect_Landing_Zone__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>firstName__c</columns>
    <columns>lastName__c</columns>
    <columns>headline__c</columns>
    <columns>url__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>